# Luo-Rudy-91-finitewave-model

./: README.md  pyproject.toml
examples/: luo_rudy_91_example.py
implementation/: luo_rudy_91_0d.py
luo_rudy_91/: ops.py
model_template/: ops.py
tests/: model_test.py
